Deployment/registry/registry_deployment_service.yml

apiVersion: v1
kind: Service
metadata:
  name: jhipster-registry
  namespace: abed-roost
  labels:
    app: jhipster-registry
spec:
  selector:
    app: jhipster-registry
  type: LoadBalancer 
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
      nodePort: 30011
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jhipster-registry
  namespace: abed-roost
  labels: 
    app: jhipster-registry
spec:
  # added to circumvent kustomize bug
  volumeClaimTemplates: []
  serviceName: jhipster-registry
  replicas: 2
  selector:
    matchLabels:
      app: jhipster-registry
      version: "1.0"
  template:
    metadata:
      labels:
        app: jhipster-registry
        version: "1.0"
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: jhipster-registry
        image: jhipster/jhipster-registry:v6.3.0
        ports:
          - containerPort: 8761
        volumeMounts:
        - name: central-config
          mountPath: /central-config
      volumes:
        - name: central-config
          configMap:
            name: application-config
